
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint32_t ;
struct ifnet {int if_flags; } ;
struct alc_softc {struct ifnet* alc_ifp; } ;
typedef int mchash ;


 int ALC_LOCK_ASSERT (struct alc_softc*) ;
 int ALC_MAC_CFG ;
 int ALC_MAR0 ;
 int ALC_MAR1 ;
 int CSR_READ_4 (struct alc_softc*,int ) ;
 int CSR_WRITE_4 (struct alc_softc*,int ,int) ;
 int IFF_ALLMULTI ;
 int IFF_BROADCAST ;
 int IFF_PROMISC ;
 int MAC_CFG_ALLMULTI ;
 int MAC_CFG_BCAST ;
 int MAC_CFG_PROMISC ;
 int alc_hash_maddr ;
 int bzero (int*,int) ;
 int if_foreach_llmaddr (struct ifnet*,int ,int*) ;

__attribute__((used)) static void
alc_rxfilter(struct alc_softc *sc)
{
 struct ifnet *ifp;
 uint32_t mchash[2];
 uint32_t rxcfg;

 ALC_LOCK_ASSERT(sc);

 ifp = sc->alc_ifp;

 bzero(mchash, sizeof(mchash));
 rxcfg = CSR_READ_4(sc, ALC_MAC_CFG);
 rxcfg &= ~(MAC_CFG_ALLMULTI | MAC_CFG_BCAST | MAC_CFG_PROMISC);
 if ((ifp->if_flags & IFF_BROADCAST) != 0)
  rxcfg |= MAC_CFG_BCAST;
 if ((ifp->if_flags & (IFF_PROMISC | IFF_ALLMULTI)) != 0) {
  if ((ifp->if_flags & IFF_PROMISC) != 0)
   rxcfg |= MAC_CFG_PROMISC;
  if ((ifp->if_flags & IFF_ALLMULTI) != 0)
   rxcfg |= MAC_CFG_ALLMULTI;
  mchash[0] = 0xFFFFFFFF;
  mchash[1] = 0xFFFFFFFF;
  goto chipit;
 }

 if_foreach_llmaddr(ifp, alc_hash_maddr, mchash);

chipit:
 CSR_WRITE_4(sc, ALC_MAR0, mchash[0]);
 CSR_WRITE_4(sc, ALC_MAR1, mchash[1]);
 CSR_WRITE_4(sc, ALC_MAC_CFG, rxcfg);
}
